sinalcabo/force-app/main/default/objects/SC_NOS_Estado__c/SC_NOS_Estado__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Estado vivo da integração com o operador: travão de emergência, suspensão em curso, contadores de erro e cursores de leitura. É dado da org e muda a cada corrida, por isso não vive em custom metadata nem viaja em deploys.</description>
    <label>Estado da integração NOS</label>
</CustomObject>