sinalcabo/force-app/main/default/objects/SC_NOS_Estado__c/fields/Contador_504__c.field-meta.xml
<CustomField>
    <fullName>Contador_504__c</fullName>
    <description>Quantas respostas cortadas pelo gateway do operador aconteceram seguidas. Duas seguidas suspendem a ligação.</description>
    <inlineHelpText>Volta a zero na primeira resposta completa.</inlineHelpText>
    <label>Cortes do gateway seguidos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>