sinalcabo/force-app/main/default/objects/SC_NOS_Estado__c/fields/Cursor_Abertas__c.field-meta.xml
<CustomField>
    <fullName>Cursor_Abertas__c</fullName>
    <description>Até onde a leitura das ordens abertas já chegou. A corrida seguinte parte daqui.</description>
    <inlineHelpText>Recuar esta data faz a integração reler o período, sem duplicar ordens.</inlineHelpText>
    <label>Cursor das abertas</label>
    <type>DateTime</type>
</CustomField>