sinalcabo/force-app/main/default/objects/SC_NOS_Estado__c/fields/Kill_Switch__c.field-meta.xml
<CustomField>
    <fullName>Kill_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quando está ligado, nenhuma corrida nova é enfileirada. É a forma imediata de parar a ligação ao operador.</description>
    <inlineHelpText>Liga para parar tudo, por exemplo a pedido da NOS. As ordens já criadas não são afectadas.</inlineHelpText>
    <label>Travão de emergência</label>
    <type>Checkbox</type>
</CustomField>