sinalcabo/force-app/main/default/objects/SC_NOS_Estado__c/fields/Suspenso_Ate__c.field-meta.xml
<CustomField>
    <fullName>Suspenso_Ate__c</fullName>
    <description>Momento até ao qual a integração está suspensa por ter apanhado erros seguidos do operador.</description>
    <inlineHelpText>É posto pela própria integração. Limpa este campo para retomar antes do tempo.</inlineHelpText>
    <label>Suspensa até</label>
    <type>DateTime</type>
</CustomField>