sinalcabo/force-app/main/default/objects/SC_NOS_Estado__c/fields/Suspensoes_Seguidas__c.field-meta.xml
<CustomField>
    <fullName>Suspensoes_Seguidas__c</fullName>
    <description>Quantas suspensões consecutivas já houve. Cada uma dobra o tempo de espera, até ao tecto de duas horas.</description>
    <inlineHelpText>Volta a zero na primeira corrida com sucesso.</inlineHelpText>
    <label>Suspensões seguidas</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>