sinalcabo/force-app/main/default/objects/SC_NOS_Estado__c/fields/Ultimo_Alerta_Watchdog__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Alerta_Watchdog__c</fullName>
    <description>Momento do último alerta enviado pela vigia da integração. Serve para o mesmo alerta não sair mais do que uma vez por hora.</description>
    <inlineHelpText>É posto pela própria vigia. Limpa este campo para forçar um alerta na próxima passagem.</inlineHelpText>
    <label>Último alerta da vigia</label>
    <type>DateTime</type>
</CustomField>