sinalcabo/force-app/main/default/objects/SC_NOS_Estado__c/fields/Ultimo_Varrimento__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Varrimento__c</fullName>
    <description>Quando correu a última passagem larga pelas ordens dos últimos dias.</description>
    <inlineHelpText>Se estiver muito atrasado, o varrimento de hora a hora não está a correr.</inlineHelpText>
    <label>Último varrimento</label>
    <type>DateTime</type>
</CustomField>